--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public (commented out - needed for Next.js static assets)
 
 # Vuepress build output
 .vuepress/dist
