--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
     "next": "^14.2.33",
     "react": "^18",
     "react-dom": "^18"
